--- a/tdocs/index.html
+++ b/tdocs/index.html
@@ -124,6 +124,9 @@
 						<a href="interfaces/asyncresult.html" class="tsd-kind-icon">Async<wbr>Result</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="interfaces/baseinterface.html" class="tsd-kind-icon">Base<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="interfaces/options.html" class="tsd-kind-icon">Options</a>
 					</li>
 					<li class=" tsd-kind-interface">
@@ -207,6 +210,5 @@
 </div>
 <div class="overlay"></div>
 <script src="assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
