--- a/tdocs/interfaces/promiseinterface.html
+++ b/tdocs/interfaces/promiseinterface.html
@@ -75,7 +75,12 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">PromiseInterface</span>
+						<a href="baseinterface.html" class="tsd-signature-type">BaseInterface</a>
+						<ul class="tsd-hierarchy">
+							<li>
+								<span class="target">PromiseInterface</span>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</section>
@@ -83,10 +88,11 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
+						<section class="tsd-index-section tsd-is-inherited">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="promiseinterface.html#tmpdir" class="tsd-kind-icon">tmpdir</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-inherited"><a href="promiseinterface.html#defaultoptions" class="tsd-kind-icon">default<wbr>Options</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-inherited"><a href="promiseinterface.html#tmpdir" class="tsd-kind-icon">tmpdir</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -94,22 +100,41 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="promiseinterface.html#dir" class="tsd-kind-icon">dir</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="promiseinterface.html#file" class="tsd-kind-icon">file</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="promiseinterface.html#forceclean" class="tsd-kind-icon">force<wbr>Clean</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface tsd-is-inherited"><a href="promiseinterface.html#forceclean" class="tsd-kind-icon">force<wbr>Clean</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="promiseinterface.html#name" class="tsd-kind-icon">name</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
+			<section class="tsd-panel-group tsd-member-group tsd-is-inherited">
 				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited">
+					<a name="defaultoptions" class="tsd-anchor"></a>
+					<h3>default<wbr>Options</h3>
+					<div class="tsd-signature tsd-kind-icon">default<wbr>Options<span class="tsd-signature-symbol">:</span> <a href="options.html" class="tsd-signature-type">Options</a></div>
+					<aside class="tsd-sources">
+						<p>Inherited from <a href="baseinterface.html">BaseInterface</a>.<a href="baseinterface.html#defaultoptions">defaultOptions</a></p>
+						<ul>
+							<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L271">index.ts:271</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<dl class="tsd-comment-tags">
+							<dt>property</dt>
+							<dd><p>{Options}</p>
+							</dd>
+						</dl>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited">
 					<a name="tmpdir" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> tmpdir</h3>
 					<div class="tsd-signature tsd-kind-icon">tmpdir<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
+						<p>Inherited from <a href="baseinterface.html">BaseInterface</a>.<a href="baseinterface.html#tmpdir">tmpdir</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L280">index.ts:280</a></li>
+							<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L276">index.ts:276</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -135,7 +160,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L299">index.ts:299</a></li>
+									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L303">index.ts:303</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -164,7 +189,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L294">index.ts:294</a></li>
+									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L298">index.ts:298</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -183,17 +208,18 @@
 						</li>
 					</ul>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
 					<a name="forceclean" class="tsd-anchor"></a>
 					<h3>force<wbr>Clean</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
 						<li class="tsd-signature tsd-kind-icon">force<wbr>Clean<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
+								<p>Inherited from <a href="baseinterface.html">BaseInterface</a>.<a href="baseinterface.html#forceclean">forceClean</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L284">index.ts:284</a></li>
+									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L280">index.ts:280</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -216,7 +242,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L289">index.ts:289</a></li>
+									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L293">index.ts:293</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -254,6 +280,9 @@
 						<a href="asyncresult.html" class="tsd-kind-icon">Async<wbr>Result</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="baseinterface.html" class="tsd-kind-icon">Base<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="options.html" class="tsd-kind-icon">Options</a>
 					</li>
 				</ul>
@@ -261,7 +290,10 @@
 					<li class="current tsd-kind-interface">
 						<a href="promiseinterface.html" class="tsd-kind-icon">Promise<wbr>Interface</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-inherited">
+								<a href="promiseinterface.html#defaultoptions" class="tsd-kind-icon">default<wbr>Options</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-inherited">
 								<a href="promiseinterface.html#tmpdir" class="tsd-kind-icon">tmpdir</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
@@ -270,7 +302,7 @@
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
 								<a href="promiseinterface.html#file" class="tsd-kind-icon">file</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-interface">
+							<li class=" tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
 								<a href="promiseinterface.html#forceclean" class="tsd-kind-icon">force<wbr>Clean</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
@@ -358,6 +390,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
