--- a/tdocs/interfaces/syncinterface.html
+++ b/tdocs/interfaces/syncinterface.html
@@ -79,7 +79,12 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">SyncInterface</span>
+						<a href="baseinterface.html" class="tsd-signature-type">BaseInterface</a>
+						<ul class="tsd-hierarchy">
+							<li>
+								<span class="target">SyncInterface</span>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</section>
@@ -87,10 +92,11 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
+						<section class="tsd-index-section tsd-is-inherited">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="syncinterface.html#tmpdir" class="tsd-kind-icon">tmpdir</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-inherited"><a href="syncinterface.html#defaultoptions" class="tsd-kind-icon">default<wbr>Options</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-inherited"><a href="syncinterface.html#tmpdir" class="tsd-kind-icon">tmpdir</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -98,22 +104,41 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="syncinterface.html#dir" class="tsd-kind-icon">dir</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="syncinterface.html#file" class="tsd-kind-icon">file</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="syncinterface.html#forceclean" class="tsd-kind-icon">force<wbr>Clean</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface tsd-is-inherited"><a href="syncinterface.html#forceclean" class="tsd-kind-icon">force<wbr>Clean</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="syncinterface.html#name" class="tsd-kind-icon">name</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
+			<section class="tsd-panel-group tsd-member-group tsd-is-inherited">
 				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited">
+					<a name="defaultoptions" class="tsd-anchor"></a>
+					<h3>default<wbr>Options</h3>
+					<div class="tsd-signature tsd-kind-icon">default<wbr>Options<span class="tsd-signature-symbol">:</span> <a href="options.html" class="tsd-signature-type">Options</a></div>
+					<aside class="tsd-sources">
+						<p>Inherited from <a href="baseinterface.html">BaseInterface</a>.<a href="baseinterface.html#defaultoptions">defaultOptions</a></p>
+						<ul>
+							<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L271">index.ts:271</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<dl class="tsd-comment-tags">
+							<dt>property</dt>
+							<dd><p>{Options}</p>
+							</dd>
+						</dl>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited">
 					<a name="tmpdir" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> tmpdir</h3>
 					<div class="tsd-signature tsd-kind-icon">tmpdir<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
+						<p>Inherited from <a href="baseinterface.html">BaseInterface</a>.<a href="baseinterface.html#tmpdir">tmpdir</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L352">index.ts:352</a></li>
+							<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L276">index.ts:276</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -139,7 +164,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L377">index.ts:377</a></li>
+									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L363">index.ts:363</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -171,7 +196,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L370">index.ts:370</a></li>
+									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L356">index.ts:356</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -193,17 +218,18 @@
 						</li>
 					</ul>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
 					<a name="forceclean" class="tsd-anchor"></a>
 					<h3>force<wbr>Clean</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
 						<li class="tsd-signature tsd-kind-icon">force<wbr>Clean<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
+								<p>Inherited from <a href="baseinterface.html">BaseInterface</a>.<a href="baseinterface.html#forceclean">forceClean</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L356">index.ts:356</a></li>
+									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L280">index.ts:280</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -226,7 +252,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L363">index.ts:363</a></li>
+									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L349">index.ts:349</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -267,6 +293,9 @@
 						<a href="asyncresult.html" class="tsd-kind-icon">Async<wbr>Result</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="baseinterface.html" class="tsd-kind-icon">Base<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="options.html" class="tsd-kind-icon">Options</a>
 					</li>
 					<li class=" tsd-kind-interface">
@@ -280,7 +309,10 @@
 					<li class="current tsd-kind-interface">
 						<a href="syncinterface.html" class="tsd-kind-icon">Sync<wbr>Interface</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-inherited">
+								<a href="syncinterface.html#defaultoptions" class="tsd-kind-icon">default<wbr>Options</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-inherited">
 								<a href="syncinterface.html#tmpdir" class="tsd-kind-icon">tmpdir</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
@@ -289,7 +321,7 @@
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
 								<a href="syncinterface.html#file" class="tsd-kind-icon">file</a>
 							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-interface">
+							<li class=" tsd-kind-method tsd-parent-kind-interface tsd-is-inherited">
 								<a href="syncinterface.html#forceclean" class="tsd-kind-icon">force<wbr>Clean</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
@@ -371,6 +403,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
