--- a/tdocs/interfaces/syncresult.html
+++ b/tdocs/interfaces/syncresult.html
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L242">index.ts:242</a></li>
+							<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L236">index.ts:236</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +124,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L246">index.ts:246</a></li>
+									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L240">index.ts:240</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -147,7 +147,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/4c152c3/src/index.ts#L250">index.ts:250</a></li>
+									<li>Defined in <a href="https://github.com/raszi/node-tmp/blob/d4a0287/src/index.ts#L244">index.ts:244</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -178,6 +178,9 @@
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="asyncresult.html" class="tsd-kind-icon">Async<wbr>Result</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="baseinterface.html" class="tsd-kind-icon">Base<wbr>Interface</a>
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="options.html" class="tsd-kind-icon">Options</a>
@@ -278,6 +281,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
